--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="big-box rosso">
         <div class="center-elements">
             <img src="img/01.png" alt="scarpa bassa blu">
-            <h1 class="giallo"><b>il nostro elemento di punta</b></h1>
+            <h1 class="giallo"><b>il nostro modello di punta</b></h1>
         </div>
     </div>
     <div class="big-box verdew">
         <div class="center-elements">
             <img src="img/02.png" alt="scarpa bassa blu">
-            <h1 class="giallo"><b>il nostro elemento di punta</b></h1>
+            <h1 class="giallo"><b>il nostro modello di punta</b></h1>
         </div>
     </div>
     <div class="big-box giallow">
         <div class="center-elements">
             <img src="img/01.png" alt="scarpa bassa blu">
-            <h1 class="verde"><b>il nostro elemento di punta</b></h1>
+            <h1 class="verde"><b>il nostro modello di punta</b></h1>
         </div>
     </div>
 </body>
