--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="big-box rosso">
+    <div>
+        <a class="nav" href="#1">1</a>
+        <a class="nav" href="#2">2</a>
+        <a class="nav" href="#3">3</a>
+    </div>
+    <!--primo prodotto-->
+    <div id="1" class="big-box rosso">
         <div class="center-elements">
             <img src="img/01.png" alt="scarpa bassa blu">
             <h1 class="giallo"><b>il nostro modello di punta</b></h1>
         </div>
     </div>
-    <div class="big-box verdew">
+    <!--seondo prodotto-->
+    <div id="2" class="big-box verdew">
         <div class="center-elements">
             <img src="img/02.png" alt="scarpa bassa blu">
             <h1 class="giallo"><b>il nostro modello di punta</b></h1>
         </div>
     </div>
-    <div class="big-box giallow">
+    <!--terzo prodotto-->
+    <div id="3" class="big-box giallow">
         <div class="center-elements">
             <img src="img/01.png" alt="scarpa bassa blu">
             <h1 class="verde"><b>il nostro modello di punta</b></h1>
