--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="navs">
         <a class="nav" href="#1">1</a>
         <a class="nav" href="#2">2</a>
         <a class="nav" href="#3">3</a>
